# Geometry-by-using-opp-s

./: Geometry_opps_concept.py  README.md  gitlinks.txt
news_fact_verification_bot/: .env.example  .gitignore  README.md  pyproject.toml
news_fact_verification_bot/.github/workflows/: ci.yml
news_fact_verification_bot/data/eval/: claims_labeled.jsonl
news_fact_verification_bot/data/raw/: news_sample.jsonl
news_fact_verification_bot/scripts/: evaluate.ps1  ingest.ps1  pipeline.ps1
news_fact_verification_bot/src/bot/: __init__.py  bm25_baseline.py  cli.py  config.py  data_ingest.py  embed.py  evaluation.py  fetch_news.py  rag_pipeline.py  retrieval.py  schemas.py  vector_store.py  verdict.py
news_fact_verification_bot/tests/: test_bm25.py  test_verdict.py
